--- a/css/all.css
+++ b/css/all.css
@@ -49,20 +49,26 @@ table {
   border-spacing: 0;
 }
 
+body {
+  background-image: url("https://images.unsplash.com/photo-1606636660488-16a8646f012c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 .title {
   font-family: 'Luckiest Guy', cursive;
-  font-size: 40px;
+  font-size: 48px;
   color: #333333;
   letter-spacing: 8.75px;
   text-align: center;
-  margin-top: 40px;
-  margin-bottom: 10px;
+  margin-top: 48px;
+  margin-bottom: 26px;
 }
 
 @media (max-width: 768px) {
   .title {
-    font-size: 30px;
+    font-size: 36px;
   }
 }
 
@@ -148,29 +154,7 @@ table {
   border: none;
   padding: 15px 8px;
 }
-.uncomplete .delBtn {
-  float: right;
-  color: black;
-  opacity: 0;
-  background-color: #fff;
-  border: none;
-  padding: 15px 8px;
-}
-.uncomplete .delBtn:hover {
-  opacity: 1;
-}
 
-.finished .delBtn {
-  float: right;
-  color: black;
-  opacity: 0;
-  background-color: #fff;
-  border: none;
-  padding: 15px 8px;
-}
-.finished .delBtn:hover {
-  opacity: 1;
-}
 .list .delBtn:hover {
   opacity: 1;
 }
@@ -208,7 +192,6 @@ label {
 ul li {
   cursor: pointer;
   position: relative;
-  align-self: center;
 }
 
 ul li p {
@@ -219,24 +202,116 @@ ul li p {
   text-decoration: line-through;
 }
 
+ul li.checked::before {
+  content: '';
+  display: block;
+  position: absolute;
+  font-size: 20px;
+  color: #ffd370;
+}
 
 label {
   display: inline-block;
 }
 
-
-body {
-  background-image: url('https://images.unsplash.com/photo-1606636660488-16a8646f012c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');
-  background-position: center center;
+/* clock */
+.clock {
+  width: 300px;
+  height: 300px;
+  background-image: url("../images/colck2.png");
   background-repeat: no-repeat;
-  background-size: cover;
-
-
+  position: relative;
+  -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7));
+  filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7));
 }
-@media (max-width: 768px) {
-  .container {
-    max-width: 351px;
-  }
+
+.hourP {
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  background-image: url("../images/hour2.png");
+  background-repeat: no-repeat;
+  -webkit-animation: j_h 43200s infinite linear;
+          animation: j_h 43200s infinite linear;
+}
+
+.minsP {
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  background-image: url("../images/min2.png");
+  background-repeat: no-repeat;
+  -webkit-animation: j_m 3600s infinite linear;
+          animation: j_m 3600s infinite linear;
+}
+
+.secP {
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  background-image: url("../images/sec-pc.png");
+  background-repeat: no-repeat;
+  -webkit-animation: j_s 60s infinite linear;
+          animation: j_s 60s infinite linear;
+}
+
+.center {
+  background: url("../images/center2.png");
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  background-repeat: no-repeat;
+  z-index: 999;
+}
+
+/* colck-lg */
+.clock-lg {
+  width: 500px;
+  height: 500px;
+  background-image: url("../images/clock.png");
+  background-repeat: no-repeat;
+  position: relative;
+  -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7));
+  filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7));
+}
+
+.hourP-lg {
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  background-image: url("../images/hour.png");
+  background-repeat: no-repeat;
+  -webkit-animation: j_h 43200s infinite linear;
+          animation: j_h 43200s infinite linear;
+}
+
+.minsP-lg {
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  background-image: url("../images/min.png");
+  background-repeat: no-repeat;
+  -webkit-animation: j_m 3600s infinite linear;
+          animation: j_m 3600s infinite linear;
+}
+
+.center-lg {
+  background: url("../images/center.png");
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  background-repeat: no-repeat;
+  z-index: 999;
+}
+
+.secP-lg {
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  background-image: url("../images/sec02.png");
+  background-repeat: no-repeat;
+  -webkit-animation: j_s 60s infinite linear;
+          animation: j_s 60s infinite linear;
 }
 
 .boxStyle {
@@ -252,96 +327,3 @@ body {
   font-size: 14px;
 }
 /*# sourceMappingURL=all.css.map */
-
-
-/* clock */
-.clock{
-  width: 300px;
-  height: 300px;
-  background-image: url('/images/colck2.png');
-  background-repeat: no-repeat;
-  position: relative;
-  -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7));
-  filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7))
-}
-
-.hourP{
-  width: 300px;
-  height: 300px;
-  position:absolute;
-  background-image: url('/images/hour2.png');
-  background-repeat: no-repeat;
-  animation: j_h 43200s infinite linear;
-}
-.minsP{
-  width: 300px;
-  height: 300px;
-  position:absolute;
-  background-image: url('/images/min2.png');
-  background-repeat: no-repeat;
-  animation: j_m 3600s infinite linear;
-}
-.secP{
-  width: 300px;
-  height: 300px;
-  position:absolute;
-  background-image: url('/images/sec-pc.png');
-  background-repeat: no-repeat;
-  animation: j_s 60s infinite linear;
-}
-.center{
-  background: url('/images/center2.png');
-  width: 300px;
-  height: 300px;
-  position:absolute;
-  background-repeat: no-repeat;
-  z-index: 999;
-}
-
-
-/* colck-lg */
-.clock-lg{
-  width: 500px;
-  height: 500px;
-  background-image: url('/images/clock.png');
-  background-repeat: no-repeat;
-  position: relative;
-  -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7));
-  filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7))
-}
-
-.hourP-lg{
-  width: 500px;
-  height: 500px;
-  position:absolute;
-  background-image: url('/images/hour.png');
-  background-repeat: no-repeat;
-  animation: j_h 43200s infinite linear;
-}
-.minsP-lg{
-  width: 500px;
-  height: 500px;
-  position:absolute;
-  background-image: url('/images/min.png');
-  background-repeat: no-repeat;
-  animation: j_m 3600s infinite linear;
-}
-
-.center-lg{
-  background: url('/images/center.png');
-  width: 500px;
-  height: 500px;
-  position:absolute;
-  background-repeat: no-repeat;
-  z-index: 999;
-}
-
-.secP-lg{
-  width: 500px;
-  height: 500px;
-  position:absolute;
-  background-image: url('/images/sec02.png');
-  background-repeat: no-repeat;
-  animation: j_s 60s infinite linear;
-
-}
