--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,5 +1,11 @@
+body {
+  background-image: url('https://images.unsplash.com/photo-1606636660488-16a8646f012c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .title{
-  font-family: 'Baloo Tammudu 2';
+  font-family: 'Luckiest Guy', cursive;
   font-size: 48px;
   color: #333333;
   letter-spacing: 8.75px;
@@ -123,4 +129,96 @@ ul li.checked::before {
 }
 label{
   display: inline-block;
+}
+
+/* clock */
+.clock{
+  width: 300px;
+  height: 300px;
+  background-image: url('../images/colck2.png');
+  background-repeat: no-repeat;
+  position: relative;
+  -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7));
+  filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7))
+}
+
+.hourP{
+  width: 300px;
+  height: 300px;
+  position:absolute;
+  background-image: url('../images/hour2.png');
+  background-repeat: no-repeat;
+  animation: j_h 43200s infinite linear;
+}
+.minsP{
+  width: 300px;
+  height: 300px;
+  position:absolute;
+  background-image: url('../images/min2.png');
+  background-repeat: no-repeat;
+  animation: j_m 3600s infinite linear;
+}
+.secP{
+  width: 300px;
+  height: 300px;
+  position:absolute;
+  background-image: url('../images/sec-pc.png');
+  background-repeat: no-repeat;
+  animation: j_s 60s infinite linear;
+}
+.center{
+  background: url('../images/center2.png');
+  width: 300px;
+  height: 300px;
+  position:absolute;
+  background-repeat: no-repeat;
+  z-index: 999;
+}
+
+
+/* colck-lg */
+.clock-lg{
+  width: 500px;
+  height: 500px;
+  background-image: url('../images/clock.png');
+  background-repeat: no-repeat;
+  position: relative;
+  -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7));
+  filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7))
+}
+
+.hourP-lg{
+  width: 500px;
+  height: 500px;
+  position:absolute;
+  background-image: url('../images/hour.png');
+  background-repeat: no-repeat;
+  animation: j_h 43200s infinite linear;
+}
+.minsP-lg{
+  width: 500px;
+  height: 500px;
+  position:absolute;
+  background-image: url('../images/min.png');
+  background-repeat: no-repeat;
+  animation: j_m 3600s infinite linear;
+}
+
+.center-lg{
+  background: url('../images/center.png');
+  width: 500px;
+  height: 500px;
+  position:absolute;
+  background-repeat: no-repeat;
+  z-index: 999;
+}
+
+.secP-lg{
+  width: 500px;
+  height: 500px;
+  position:absolute;
+  background-image: url('../images/sec02.png');
+  background-repeat: no-repeat;
+  animation: j_s 60s infinite linear;
+
 }
