--- a/css/all.css
+++ b/css/all.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -49,13 +48,6 @@ table {
   border-spacing: 0;
 }
 
-body {
-  background-image: url("https://images.unsplash.com/photo-1606636660488-16a8646f012c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 .title {
   font-family: 'Luckiest Guy', cursive;
   font-size: 48px;
@@ -70,6 +62,13 @@ body {
   .title {
     font-size: 36px;
   }
+}
+
+body {
+  background-image: url("../images/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
 }
 
 .addInput {
@@ -228,19 +227,17 @@ ul li p {
   text-decoration: line-through;
 }
 
-ul li.checked::before {
-  content: '';
-  display: block;
-  position: absolute;
-  font-size: 20px;
-  color: #ffd370;
-}
-
 label {
   display: inline-block;
 }
 
-/* clock */
+.title {
+  color: black;
+  font-size: 50px;
+  text-shadow: #fcfcfc 4px 4px 4px;
+}
+
+/* clock-mobile */
 .clock {
   width: 300px;
   height: 300px;
@@ -265,7 +262,7 @@ label {
   width: 300px;
   height: 300px;
   position: absolute;
-  background-image: url("../images/min2.png");
+  background-image: url("../images/min_mobile.png");
   background-repeat: no-repeat;
   -webkit-animation: j_m 3600s infinite linear;
           animation: j_m 3600s infinite linear;
@@ -275,14 +272,14 @@ label {
   width: 300px;
   height: 300px;
   position: absolute;
-  background-image: url("../images/sec-pc.png");
+  background-image: url("../images/sec_mobile.png");
   background-repeat: no-repeat;
   -webkit-animation: j_s 60s infinite linear;
           animation: j_s 60s infinite linear;
 }
 
 .center {
-  background: url("../images/center2.png");
+  background: url("../images/center_mobile.png");
   width: 300px;
   height: 300px;
   position: absolute;
@@ -292,9 +289,9 @@ label {
 
 /* colck-lg */
 .clock-lg {
-  width: 500px;
-  height: 500px;
-  background-image: url("../images/clock.png");
+  width: 400px;
+  height: 400px;
+  background-image: url("../images/clock_pc.png");
   background-repeat: no-repeat;
   position: relative;
   -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7));
@@ -302,39 +299,39 @@ label {
 }
 
 .hourP-lg {
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   position: absolute;
-  background-image: url("../images/hour.png");
+  background-image: url("../images/hour_pc.png");
   background-repeat: no-repeat;
   -webkit-animation: j_h 43200s infinite linear;
           animation: j_h 43200s infinite linear;
 }
 
 .minsP-lg {
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   position: absolute;
-  background-image: url("../images/min.png");
+  background-image: url("../images/min_pc.png");
   background-repeat: no-repeat;
   -webkit-animation: j_m 3600s infinite linear;
           animation: j_m 3600s infinite linear;
 }
 
 .center-lg {
-  background: url("../images/center.png");
-  width: 500px;
-  height: 500px;
+  background: url("../images/center_pc.png");
+  width: 400px;
+  height: 400px;
   position: absolute;
   background-repeat: no-repeat;
   z-index: 999;
 }
 
 .secP-lg {
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   position: absolute;
-  background-image: url("../images/sec02.png");
+  background-image: url("../images/sec_pc.png");
   background-repeat: no-repeat;
   -webkit-animation: j_s 60s infinite linear;
           animation: j_s 60s infinite linear;
