--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,21 +1,11 @@
-body {
-  background-image: url('https://images.unsplash.com/photo-1606636660488-16a8646f012c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');
-  background-position: center center;
+body{
+  background-image: url('../images/bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-}
-.title{
-  font-family: 'Luckiest Guy', cursive;
-  font-size: 48px;
-  color: #333333;
-  letter-spacing: 8.75px;
-  text-align: center;
-  margin-top: 48px;
-  margin-bottom: 26px;
-  @include mobile{
-    font-size: 36px;
+  // background-position: center center;
+  height: 100%;
+
   }
-}
 .addInput{
   padding: 4px 0px 4px 24px;
   display: flex;
@@ -139,26 +129,18 @@ ul li {
 .checked {
   text-decoration: line-through;
 }
-ul li.checked::before {
-  content: '';
-  display: block;
-  position: absolute;
-  font-size: 20px;
-  color: #ffd370;
- 
-  // border-style: solid;
-  // border-width: 0 2px 2px 0;
-  // top: 12px;
-  // left: 20px;
-  // transform: rotate(45deg);
-  // height: 15px;
-  // width: 7px;
-}
+
 label{
   display: inline-block;
 }
 
-/* clock */
+.title{
+  color: rgb(0, 0, 0);
+  font-size: 50px;
+  text-shadow: rgb(252, 252, 252) 4px 4px 4px;
+}
+
+/* clock-mobile */
 .clock{
   width: 300px;
   height: 300px;
@@ -166,7 +148,8 @@ label{
   background-repeat: no-repeat;
   position: relative;
   -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7));
-  filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7))
+  filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7));
+
 }
 
 .hourP{
@@ -181,7 +164,7 @@ label{
   width: 300px;
   height: 300px;
   position:absolute;
-  background-image: url('../images/min2.png');
+  background-image: url('../images/min_mobile.png');
   background-repeat: no-repeat;
   animation: j_m 3600s infinite linear;
 }
@@ -189,12 +172,12 @@ label{
   width: 300px;
   height: 300px;
   position:absolute;
-  background-image: url('../images/sec-pc.png');
+  background-image: url('../images/sec_mobile.png');
   background-repeat: no-repeat;
   animation: j_s 60s infinite linear;
 }
 .center{
-  background: url('../images/center2.png');
+  background: url('../images/center_mobile.png');
   width: 300px;
   height: 300px;
   position:absolute;
@@ -205,9 +188,9 @@ label{
 
 /* colck-lg */
 .clock-lg{
-  width: 500px;
-  height: 500px;
-  background-image: url('../images/clock.png');
+  width: 400px;
+  height: 400px;
+  background-image: url('../images/clock_pc.png');
   background-repeat: no-repeat;
   position: relative;
   -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7));
@@ -215,36 +198,36 @@ label{
 }
 
 .hourP-lg{
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   position:absolute;
-  background-image: url('../images/hour.png');
+  background-image: url('../images/hour_pc.png');
   background-repeat: no-repeat;
   animation: j_h 43200s infinite linear;
 }
 .minsP-lg{
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   position:absolute;
-  background-image: url('../images/min.png');
+  background-image: url('../images/min_pc.png');
   background-repeat: no-repeat;
   animation: j_m 3600s infinite linear;
 }
 
 .center-lg{
-  background: url('../images/center.png');
-  width: 500px;
-  height: 500px;
+  background: url('../images/center_pc.png');
+  width: 400px;
+  height: 400px;
   position:absolute;
   background-repeat: no-repeat;
   z-index: 999;
 }
 
 .secP-lg{
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   position:absolute;
-  background-image: url('../images/sec02.png');
+  background-image: url('../images/sec_pc.png');
   background-repeat: no-repeat;
   animation: j_s 60s infinite linear;
 
