更新時鐘center樣式

--- a/css/all.css
+++ b/css/all.css
@@ -68,6 +68,7 @@ body {
   background-image: url("../images/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
   height: 100%;
 }
 
