--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -2,7 +2,7 @@ body{
   background-image: url('../images/bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  // background-position: center center;
+  background-position: center center;
   height: 100%;
 
   }
