--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -46,6 +46,9 @@ body{
     }
   }
 }
+.nav-link{
+  color: black;
+}
 .uncomplete {
   .delBtn{
     float: right;
@@ -73,6 +76,7 @@ body{
     }
   }
 }
+
 .list{
   // padding: 16px;
   display: flex;
